XXXX-XX-XX      XXXXXX  Windows doesn't properly support fork() so skip the tests for it;
                        Correctly identify UK 04 and 05[01234789] number as invalid,
                          instead of valid but unallocated (fix arising from
                          https://github.com/DrHyde/perl-modules-Number-Phone/issues/98);
                        Minor documentation clarification re constructor;
                        Use data from a tagged release of libphonenumber instead of whatever
                          is in master, so builds are more reproducible;
                        Expose that tag in libphonenumber_tag method;
                        Expose OFCOM, CNAC, NPA and localcallingguide.com data update
                          date/time in N::P::{UK,NANP::CA,NANP::US,NANP}->data_source;
                        Data updates

2020-09-04      3.6006  Data updates

2020-06-06      3.6005  Data updates

2020-05-11      3.6004  Data updates;
                        Improved doco on the data update policy :-)

2020-04-27      3.6003  Testing improvements for fork()ing code;
                        Data updates

2020-03-09      3.6002  Data updates

2019-12-11      3.6001  Inmarsat +871 to +874 have been de-commissioned;
                        Added some US overlay codes (not all are in use yet);
                        Data updates

2019-09-12      3.6000  Data updates;
                        UK is_drama() numbers now all respond appropriately
                          to is_mobile, is_tollfree etc, and the mobile range
                          is correctly identified as being UK-wide and not Jersey
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/67);
                        Areaname() sensitive to your locale

2019-06-11      3.5001  Corrected international dialling data for Antarctic
                          research stations;