@@ -92,6 +92,9 @@ t/fork.t
 t/country-test-my.t
 lib/Number/Phone/Data.pm
 t/source_data.t
+buildtools/Number/Phone/BuildTools.pm
+t/manifest-contains-all-modules.t
+t/only-use-blib-under-make-test.t
 lib/Number/Phone/StubCountry/AC.pm
 lib/Number/Phone/StubCountry/AD.pm
 lib/Number/Phone/StubCountry/AE.pm
@@ -337,6 +340,3 @@ lib/Number/Phone/StubCountry/YT.pm
 lib/Number/Phone/StubCountry/ZA.pm
 lib/Number/Phone/StubCountry/ZM.pm
 lib/Number/Phone/StubCountry/ZW.pm
-buildtools/Number/Phone/BuildTools.pm
-t/manifest-contains-all-modules.t
-t/only-use-blib-under-make-test.t
